--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ body {
     width: 100%;
     height: 150px;
     margin: 0 auto;
+    user-select: none   /* disables text selection */
 }
 
 .choices-container > .choice {
