--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Dokdo&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Gaegu:wght@400;700&display=swap');
+
 * {
 box-sizing: border-box;
 }
@@ -8,6 +11,7 @@ body {
     min-height: 100vh; /* Ensure the body fills full viewport height */
     margin: 0;
     background-color: rgb(255, 249, 243);
+    font-family: Gaegu, sans-serif;
 }
 
 .header {
@@ -17,6 +21,7 @@ body {
     background-color: rgb(163, 226, 255);
     color: rgb(216, 72, 72);
     font-size: 30px;
+    font-family: Dokdo, sans-serif;
 }
 
 .scores {
@@ -46,8 +51,17 @@ body {
     width: 100px;
     height: 100px;
     margin: 0;
-    border-style: solid;
     transition: inherit;
+}
+
+.choice > img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.choice > img:hover {
+    filter: invert(42%) sepia(16%) saturate(30%) hue-rotate(336deg) brightness(102%) contrast(99%);
+    cursor: pointer;
 }
 
 .buttons {
@@ -56,10 +70,25 @@ body {
     min-width: 520px;
 }
 
-#right-button {
+.buttons > button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-style: solid;
+    border-width: 1px;
+    border-color: rgb(188, 207, 219);
+    border-radius: 50%;
+    background-color: rgb(214, 230, 241);
+    font-size: large;
+    font-family: Gaegu, sans-serif;
+    width: 30px;
+    height: 30px;
+    padding: 0;
+    cursor: pointer;
 }
 
-#left-button {
+.buttons > button:hover {
+    background-color: rgb(197, 212, 221);
 }
 
 .choices-transition {
@@ -106,15 +135,32 @@ body {
 
 #hands-container {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     flex: 1;
 }
 
 .hands {
-    width: 280px;
-    height: 150px;
-    border-style: solid;
+    display: flex;
+    justify-content: center;
+    width: 250px;
+    height: 250px;
+    position: relative;
+}
+
+.hands > img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+#left-hand > img {
+    transform: scaleX(-1) rotate(-90deg);
+    position: absolute;
+}
+
+#right-hand > img {
+    transform: scaleX(1) rotate(-90deg);
+    position: absolute;
 }
 
 @keyframes leftHandAnimation {
