--- a/style.css
+++ b/style.css
@@ -99,8 +99,32 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     margin: 20px auto;
-    border-style: solid;
+    gap: 8px;
+}
+
+.play-btn-container > button {
+    font-size: 18px;
+    font-family: Gaegu, sans-serif;
+    font-weight: 700;
+    width: 200px;
+}
+
+#play-btn {
+    background-color: rgb(100, 255, 114);
+}
+
+#play-btn:hover {
+    background-color: rgb(65, 230, 60);
+}
+
+#reset-btn {
+    background-color: rgb(255, 100, 114);
+}
+
+#reset-btn:hover {
+    background-color: rgb(255, 65, 60);
 }
 
 .animation-container {
@@ -131,6 +155,8 @@ body {
 #round-info > p {
     margin: 0;
     padding: 0;
+    font-size: large;
+    font-weight: bold;
 }
 
 #hands-container {
@@ -186,6 +212,15 @@ body {
         transform: rotate(-15deg);
     }
 }
+
+@keyframes slideDownAnimation {
+    from {
+      transform: translateY(-100%);
+    }
+    to {
+      transform: translateY(0);
+    }
+  }
 
 .footer-separator {
     flex: 1;
