--- a/style.css
+++ b/style.css
@@ -114,6 +114,7 @@ body {
     font-family: Gaegu, sans-serif;
     font-weight: 700;
     width: 200px;
+    cursor: pointer;
 }
 
 #play-btn {
@@ -150,17 +151,18 @@ body {
 #round-info {
     position: absolute;
     display: none;
-    background-color: rgb(147, 171, 194);
+    background-color: rgba(147, 171, 194, 0.5); /* Use rgba for transparency */
     flex-direction: column;
     align-items: center;
     width: 100%;
+    text-align: center;
     z-index: 1;
 }
 
 #round-info > p {
     margin: 0;
     padding: 0;
-    font-size: large;
+    font-size: 25px;
     font-weight: bold;
 }
 
