Changed "animation-container" from id to class

--- a/style.css
+++ b/style.css
@@ -183,7 +183,7 @@ body {
     font-weight: bold;
 }
 
-#hands-container {
+.hands-container {
     display: flex;
     justify-content: space-around;
     align-items: center;
